tests/ui/type/ascription/issue-60933.stderr
error: path separator must be a double colon
  --> $DIR/issue-60933.rs:3:28
   |
LL |     let _: usize = std::mem:size_of::<u32>();
   |                            ^ help: use a double colon instead: `::`
   |
   = note: if you meant to annotate an expression with a type, the type ascription syntax has been removed, see issue #101728 <https://github.com/rust-lang/rust/issues/101728>

error: aborting due to previous error

